--- a/Views/Login/Cadastrar.cshtml
+++ b/Views/Login/Cadastrar.cshtml
@@ -3,107 +3,86 @@
     ViewBag.Title = "Cadastrar";
 }
 <link href="~/Styles/reset.css" rel="stylesheet" />
+<link href="~/Styles/login.css" rel="stylesheet" />
+
+
 
 
 @using (Html.BeginForm("CadastrarUsuario", "Login", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal container center">
-    <h2 style="margin: 1rem;">Cadastrar</h2>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal container"  style="padding:1.5rem;">
 
-    @if (TempData["Mensagem Erro Cadastro CPF"] != null)
-    {
-        <div class="alert alert-danger" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["Mensagem Erro Cadastro CPF"]
-        </div>
-    }
-    @if (TempData["Mensagem Erro Cadastro Email"] != null)
-    {
-        <div class="alert alert-danger" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["Mensagem Erro Cadastro Email"]
-        </div>
-    }
-    @if (TempData["Mensagem Erro Cadastro CPF Email"] != null)
-    {
-        <div class="alert alert-danger" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["Mensagem Erro Cadastro CPF Email"]
-        </div>
-    }
-    @if (TempData["Mensagem Erro Cadastro Login"] != null)
-    {
-        <div class="alert alert-danger" role="alert">
-            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-            @TempData["Mensagem Erro Cadastro Login"]
-        </div>
-    }
-    <div class="d-flex">
-        <br />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.nm, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite seu nome" } })
-            @Html.ValidationMessageFor(model => model.nm, "", new { @class = "text-danger " })
+        <div class="row fundo">
+            <div class="col box-inputs">
+                <div>
+                    <h2 class="subtitulo1">Criar conta ✈️</h2>
+                    <p>Preencha com seus dados para realizar o cadastro.</p>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.nm, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira seu nome" } })
+                        @Html.ValidationMessageFor(model => model.nm, "", new { @class = "text-danger " })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.dsEmail, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira seu email" } })
+                        @Html.ValidationMessageFor(model => model.dsEmail, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.dsSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira uma senha", type = "password" } })
+                        @Html.ValidationMessageFor(model => model.dsSenha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Confirme sua senha", type = "password" } })
+                        @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.noCPF, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira seu CPF" } })
+                        @Html.ValidationMessageFor(model => model.noCPF, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.dsLogin, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira seu login" } })
+                        @Html.ValidationMessageFor(model => model.dsLogin, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira seu telefone" } })
+                        @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                        <input type="submit" value="Finalizar Cadastro" class="btn-dark-blue-large "   />
+                </div>
+                <p>Já tem uma conta? @Html.ActionLink("Entre agora mesmo", "Login", "Home")</p>
+            </div>
+     
+
+            <div class="col">
+                <img class="img-login" src="https://caravaggiopraiahotel.com.br/wp-content/uploads/2020/04/Primeira-viagem-de-aviao.jpg" />
+            </div>
+
         </div>
     </div>
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.dsEmail, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite seu email" } })
-            @Html.ValidationMessageFor(model => model.dsEmail, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.dsSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite sua senha", type = "password" } })
-            @Html.ValidationMessageFor(model => model.dsSenha, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control input", placeholder = "Confirme sua senha", type = "password" } })
-            @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.noCPF, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite o CPF" } })
-            @Html.ValidationMessageFor(model => model.noCPF, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.dsLogin, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite o login" } })
-            @Html.ValidationMessageFor(model => model.dsLogin, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <br />
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite o Telefone" } })
-            @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Finalizar Cadastro" class="btn-dark-blue " style="margin: 1rem;" />
-        </div>
-    </div>
-</div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
