--- a/Views/Login/Cadastrar.cshtml
+++ b/Views/Login/Cadastrar.cshtml
@@ -73,7 +73,7 @@
                 <div class="form-group">
                         <input type="submit" value="Finalizar Cadastro" class="btn-dark-blue-large "   />
                 </div>
-                <p>Já tem uma conta? @Html.ActionLink("Entre agora mesmo", "Login", "Home")</p>
+                <p>Já tem uma conta? @Html.ActionLink("Acesse sua conta", "Login", "Login")</p>
             </div>
      
 
