--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -48,7 +48,7 @@
                 <div class="form-group">
                     <input type="submit" value="Entrar" class="btn-dark-blue-large" />
                 </div>
-                <p>Não tem uma conta? @Html.ActionLink("Cadastre-se agora mesmo", "Cadastrar", "Login")</p>
+                <p>Não tem uma conta? @Html.ActionLink("Cadastre-se", "Cadastrar", "Login")</p>
             </div>
             <div class="col">
                 <img class="img-login" src="https://caravaggiopraiahotel.com.br/wp-content/uploads/2020/04/Primeira-viagem-de-aviao.jpg"  />
