--- a/Views/Pacote/CadPacote.cshtml
+++ b/Views/Pacote/CadPacote.cshtml
@@ -1,78 +1,161 @@
-﻿@model AspViagens.Models.Banco.Pacote
+﻿<!-- Custom fonts for this template-->
+<link href="~/Content/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+<link href="~/Content/css/sb-admin-2.min.css" rel="stylesheet">
+<link href="~/Styles/dashboard.css" rel="stylesheet" />
+<link href="~/Styles/reset.css" rel="stylesheet" />
+
+@model AspViagens.Models.Banco.Pacote
 
 @{
     ViewBag.Title = "CadPacote";
 }
 
-<h2>Cadastar Pacote de Viagem</h2>
+
 
 @using (Html.BeginForm("Inser_Planos", "Plano", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-     
-        <br />
 
-        <div class="form-group">
+
+    <!-- Page Wrapper -->
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <ul class="navbar-nav sidebar accordion bacana" id="accordionSidebar" style="background-color:black; padding: 1rem;">
+
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+            <br />
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <i class="fa-solid fa-house"></i>
+                @Html.ActionLink("Início", "Dashboard", "Home", new { area = "" }, new { @class = "list-text" })
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Planos
+            </div>
+
+            <!-- Nav Item - Utilities Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-fw Example of credit-card-alt fa-credit-card-alt"></i>
+                    <span>Vendas</span>
+                </a>
+            </li>
+
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <i class="fa-solid fa-inbox"></i>
+                @Html.ActionLink("Cadastar planos", "CadPacote", "Pacote", new { area = "" }, new { @class = "list-text" })
+            </li>
+            <br />
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <i class="fa-solid fa-list"></i>
+                @Html.ActionLink("Todos os planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "list-text" })
+            </li>
+            <br />
+            <li>
+                <i class="fa-solid fa-right-to-bracket"></i>
+                @Html.ActionLink("Sair", "Logout", "Home", new { @class = "list-text" })
+            </li>
+
+
+        </ul>
+        <!-- End of Sidebar -->
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
             <div>
-                <label class="control-label col-md-2">Insira o Interesse</label>
-            </div>
-            @Html.DropDownList("nmPacote", ViewBag.nmPacote as List<SelectListItem>)            
-        </div>
 
-        <br />
+                <div class="container-fluid">
+                    <br />
+                    <div class="form-horizontal">
 
-        <div class="form-group">
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dsPreco, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite o Preço do Pacote" } })
-                @Html.ValidationMessageFor(model => model.dsPreco, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <br />
+                        <div class="form-group">
+                            <div>
+                                <label class="control-label col-md-2">Qual é o interesse do pacote?</label>
+                            </div>
+                            <div class="col-md-10">
 
-        <div class="form-group">
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dsPacote, new { htmlAttributes = new { @class = "form-control input", placeholder = "Digite a Descrição do Pacote" } })
-                @Html.ValidationMessageFor(model => model.dsPacote, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                @Html.DropDownList("nmPacote", ViewBag.nmPacote as List<SelectListItem>, new { @class = "form-control input" })
+                            </div>
+                        </div>
 
-        <br />
+                        <br />
 
-        <div class="form-group">
-            <div>
-                <label class="control-label col-md-2" for="file">Imagem do Pacote</label>
-            </div>
-            <div class="col-md-10">
-                <input type="file" name="file" id="file" />
-                <br />
-                @if (TempData["Mensagem Erro Imagem1"] != null)
-                {
-                    <div class="alert alert-danger" role="alert">
-                        <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-                        @TempData["Mensagem Erro Imagem1"]
+                        <div class="form-group">
+                            <div>
+                                <label class="control-label col-md-2">Qua o valor do pacote?</label>
+                            </div>
+                            <div class="col-md-10">
+
+                                @Html.EditorFor(model => model.dsPreco, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira o preço deste pacote" } })
+                                @Html.ValidationMessageFor(model => model.dsPreco, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <br />
+
+                        <div class="form-group">
+                            <div>
+                                <label class="control-label col-md-2">Descreva este pacote:</label>
+                            </div>
+                            <div class="col-md-10">
+
+                                @Html.EditorFor(model => model.dsPacote, new { htmlAttributes = new { @class = "form-control input", placeholder = "Insira uma breve descrição deste pacote" } })
+                                @Html.ValidationMessageFor(model => model.dsPacote, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <br />
+
+                        <div class="form-group">
+                            <div>
+                                <label class="control-label col-md-2" for="file">Imagem do Pacote</label>
+                            </div>
+                            <div class="col-md-10">
+                                <input type="file" name="file" id="file" />
+                                <br />
+                               
+                            </div>
+                        </div>
+
+                        <br />
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Cadastrar Pacote" class="btn-dark-blue-large" />
+                            </div>
+                        </div>
                     </div>
-                }
-            </div>
-        </div>
 
-        <br />
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Cadastrar Pacote" class="color btn btn-default azul" />
+                 
+                </div>
+               
             </div>
+            <!-- /.container-fluid -->
+
         </div>
+        <!-- End of Main Content -->
+
     </div>
+    <!-- End of Content Wrapper -->
 }
+<!-- End of Page Wrapper -->
+<!-- Scroll to Top Button-->
 
-<div>
-    @Html.ActionLink("Retornar a Página", "Index", "Home")
-</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
