--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,63 +13,61 @@
     <link href="~/Styles/reset.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
-        <div class="container">
-            <b> @Html.ActionLink("Além das Fronteiras", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</b>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar a navegação" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
-                    {
-
-                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        @*<li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link" })</li>*@
-
-                    }
-
-                    @if (Session["tipoLogado1"] != null)
-                    {
-                        <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Carrinho", "Carrinho", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
-
-
-                </ul>
-
-                <div class="icons-nav">
-                    @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
-                    {<i class="fa-solid fa-basket-shopping fa-xl login"></i>
-                        @Html.ActionLink(" ", "Login", "Home", new { @class = "fa-solid fa-user fa-xl login" })
-                    }
-                    else
-                    {
-                        if (Session["tipoLogado1"] != null)
+    @if (Session["tipoLogado2"] == null)
+    {
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
+            <div class="container">
+                <b> @Html.ActionLink("Além das Fronteiras", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</b>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar a navegação" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
                         {
-                            @Session["dsLogin"]
-                            @Html.ActionLink(" ", "Logout", "Home", new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
-                            @Html.ActionLink(" ", "Detalhes", "Home", new { @class = "fa-solid fa-basket-shopping fa-xl login" })
-
+                            <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "nav-link" })</li>
                         }
 
-                        if (Session["tipoLogado2"] != null)
+                        @if (Session["tipoLogado1"] != null)
                         {
-                            @Session["dsLogin"]
-                            @Html.ActionLink("Painel", "Dashboard", "Home", new { area = "" }, new { @class = "nav-link" })
-                            @Html.ActionLink(" ", "Logout", "Home", new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
+                            <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "nav-link" })</li>
                         }
+                    </ul>
 
-                    }
+                    <div class="icons-nav">
+                        @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
+                        {
+                            @Html.ActionLink(" ", "Carrinho", "Home", null, new { @class = "fa-solid fa-basket-shopping fa-xl login" })
+                            @Html.ActionLink(" ", "Login", "Login", null, new { @class = "fa-solid fa-user fa-xl login" })
+                        }
+                        else
+                        {
+                            if (Session["tipoLogado1"] != null)
+                            {
+                                @Session["dsLogin"]
+                                @Html.ActionLink(" ", "Logout", "Home", null, new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
+                                @Html.ActionLink(" ", "Carrinho", "Home", null, new { @class = "fa-solid fa-basket-shopping fa-xl login" })
+
+                            }
+
+                            if (Session["tipoLogado2"] != null)
+                            {
+                                @Session["dsLogin"]
+                                @Html.ActionLink("Painel", "Dashboard", "Home", new { area = "" }, new { @class = "nav-link" })
+                                @Html.ActionLink(" ", "Logout", "Home", null, new { @class = "fa-solid fa-right-to-bracket fa-xl login" })
+                            }
+
+                        }
+                    </div>
+
                 </div>
-
             </div>
-        </div>
 
-    </nav>
+        </nav>
+    }
     <div class=" " style="overflow: hidden">
         @RenderBody()
 
