--- a/Views/Home/Detalhes.cshtml
+++ b/Views/Home/Detalhes.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "Detalhes";
 }
 
-<h2>Detalhes</h2>
+
 
 <table class="table">
     @if (Model == null)
     {
-        <h2>Voçe não possui pacotes cadastrados</h2>
+        <h2>Você não possui pacotes cadastrados</h2>
     }
     else
     {
