--- a/Views/Home/ConsTdDetalhes.cshtml
+++ b/Views/Home/ConsTdDetalhes.cshtml
@@ -4,51 +4,118 @@
     ViewBag.Title = "Consultar Vendas";
 }
 
+<!-- Custom fonts for this template-->
+<link href="~/Content/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+<link href="~/Content/css/sb-admin-2.min.css" rel="stylesheet">
+<link href="~/Styles/dashboard.css" rel="stylesheet" />
+
 <link href="~/Style/CategoriaStyle/Cat.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
-<h2 class="text-center">Todas as Compras</h2>
-
-<table id="myTable" class="table table-striped table-bordered" style="width:100%">
-    <thead>
-        <tr class="bg-success">
-            <th>Codigo</th>
-            <th>Nome</th>
-            <th>Preço</th>
-            <th>Descrição</th>
-            <th>Baixa</th>
-        </tr>
-    </thead>
-    <tbody>
-
-        @if (ViewBag.lista == null)
-        {
-
-        }
-        else
-        {
-            foreach (var item in ViewBag.lista)
-            {
-                var idAleatorio = Guid.NewGuid().ToString();
-                <tr>
-                    <td>@item.IdPacote</td>
-                    <td>@item.nmPacote</td>
-                    <td>@item.dsPreco</td>
-                    <td>@item.dsPacote</td>
 
 
-                    <td><button id="@idAleatorio" onclick="alternarEstado(this); clicarBotao(idAleatorio)" type="submit" style="background-color:red;color:white">Sem Baixa</button></td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
-@Html.ActionLink("Consulta Grafico", "Grafico", "Home");
 
-<script>
+<!-- Page Wrapper -->
+<div id="wrapper">
+
+    <!-- Sidebar -->
+    <ul class="navbar-nav sidebar accordion bacana" id="accordionSidebar" style="background-color:black; padding: 1rem;">
+
+        <!-- Divider -->
+        <hr class="sidebar-divider my-0">
+        <br />
+        <!-- Nav Item - Dashboard -->
+        <li class="nav-item active">
+            <i class="fa-solid fa-house"></i>
+            @Html.ActionLink("Início", "Dashboard", "Home", new { area = "" }, new { @class = "list-text" })
+        </li>
+
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <i class="fas fa-fw Example of credit-card-alt fa-credit-card-alt"></i>
+            @Html.ActionLink("Tabela Vendas", "ConsTdDetalhes", "Home", new { area = "" }, new { @class = "list-text" })
+        </li>
+        <br />
+        <!-- Nav Item - Charts -->
+        <li class="nav-item">
+            <i class="fa-solid fa-inbox"></i>
+            @Html.ActionLink("Cadastar planos", "CadPacote", "Pacote", new { area = "" }, new { @class = "list-text" })
+        </li>
+        <br />
+
+        <!-- Nav Item - Tables -->
+        <li class="nav-item">
+            <i class="fa-solid fa-list"></i>
+            @Html.ActionLink("Todos os planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "list-text" })
+        </li>
+        <br />
+        <li>
+            <i class="fa-solid fa-right-to-bracket"></i>
+            @Html.ActionLink("Sair", "Logout", "Home", new { area = "" }, new { @class = "list-text" })
+        </li>
+
+
+    </ul>
+    <!-- End of Sidebar -->
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+
+        <!-- Main Content -->
+        <div>
+
+            <div class="container-fluid">
+                <br />
+                <!-- Page Heading -->
+                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <h2 class="text-center">Todas as Compras</h2>
+                </div>
+
+                <!-- Content Row -->
+                <div class="row">
+
+                    <table id="myTable" class="table table-striped table-bordered" style="width:100%">
+                        <thead>
+                            <tr class="bg-success">
+                                <th>Código</th>
+                                <th>Nome</th>
+                                <th>Preço</th>
+                                <th>Descrição</th>
+                                <th>Baixa</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            @if (ViewBag.lista == null)
+                            {
+
+                            }
+                            else
+                            {
+                                foreach (var item in ViewBag.lista)
+                                {
+                                    var idAleatorio = Guid.NewGuid().ToString();
+                                    <tr>
+                                        <td>@item.IdPacote</td>
+                                        <td>@item.nmPacote</td>
+                                        <td>@item.dsPreco</td>
+                                        <td>@item.dsPacote</td>
+
+
+                                        <td><button id="@idAleatorio" onclick="alternarEstado(this); clicarBotao(idAleatorio)" type="submit" style="background-color:red;color:white">Sem Baixa</button></td>
+                                    </tr>
+                                }
+                            }
+                        </tbody>
+                    </table>
+
+                    <script>
     new DataTable('#myTable');
 
     var estados = [
@@ -76,4 +143,34 @@
     }
     }
 
-</script>
+                    </script>
+
+
+
+                </div>
+
+            </div>
+            <!-- /.container-fluid -->
+
+        </div>
+        <!-- End of Main Content -->
+
+    </div>
+    <!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+</a>
+
+
+
+
+
+
+
+
+
+
