--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sub-carrossel">INTERCÂMBIO EM</h5>
                 <h1 class="titulo">Singapura</h1>
-                <button class="btn-transp-carros">Conheça esse destino → </button>
-            </div>
+                <a class="btn-transp-carros" href="@Url.Action("SaibaMaisPlanos","Plano", new { id = 3 })">Conheça esse destino → </a>
+</div>
         </div>
         <div class="carousel-item">
             <img src="~/Imagens/irlanda1.png" class="d-block w-100 carrossel-img" alt="...">
