--- a/Views/Pacote/CadPacote.cshtml
+++ b/Views/Pacote/CadPacote.cshtml
@@ -74,7 +74,7 @@
                 <div class="container-fluid">
                     <br />
                     <div class="form-horizontal">
-
+                        <h2>Inserir novo pacote</h2>
 
                         <div class="form-group">
                             <div>
