--- a/Styles/saibamaisPlanos.css
+++ b/Styles/saibamaisPlanos.css
@@ -1,12 +1,14 @@
 ﻿.box-titulo{
     text-align: center;
     margin-top: 2rem;
+
 }
 
-.titulo {
+.tituloPlano {
     font-family: Mogra;
     font-size: 8rem;
-    margin-bottom: -2rem;
+    color: #48D597;
+    align-items: center;
 }
 
 .sub-carrossel {
@@ -34,7 +36,7 @@
     font-weight: bolder;
     margin-top: -10px;
 }
-i{
+.icone{
     border: solid 5px rgb(255, 255, 255, 0.40);
     padding: 1.5rem 1rem;
     border-radius: 50%;
@@ -51,6 +53,8 @@ i{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 0.5rem;
+    margin-top: -0.7rem;
 }
 
 .icon{
