--- a/Views/Home/Carrinho.cshtml
+++ b/Views/Home/Carrinho.cshtml
@@ -1,16 +1,13 @@
 ﻿@model AspViagens.Models.Banco.modelCompra
 <link href="~/Styles/reset.css" rel="stylesheet" />
-@{
-    ViewBag.Title = "Carrinho";
-}
+@{ ViewBag.Title = "Carrinho"; }
 
 @if (TempData["Mensagem Erro Carrinho"] != null)
 {
-    <div class="alert alert-danger" role="alert">
-        <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
-        @TempData["Mensagem Erro Carrinho"] @Html.ActionLink("Login", "Login", "Login")
-    </div>
-}
+<div class="alert alert-danger" role="alert">
+    <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+    @TempData["Mensagem Erro Carrinho"] @Html.ActionLink("Login", "Login", "Login")
+</div>}
 <section class="h-100 gradient-custom">
     <div class="container py-5">
         <div class="row d-flex justify-content-center my-4">
@@ -23,58 +20,56 @@
 
                         @if (Session["Carrinho"] == null)
                         {
-                            <h3>Você não possui itens no carrinho</h3>
-                        }
-                        else
-                        {
+            <h3>Você não possui itens no carrinho</h3> }
+        else
+        {
 
-                            foreach (var item in Model.PlanosPedidos)
-                            {
-                                if (item.PlanoPedidoID == null)
-                                {
-                                    <h3>Você não possui itens no carrinho</h3>
-                                }
-                                else
-                                {
-                                    <!-- Single item -->
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                                            <!-- Image -->
-                                            <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                                                <img src="@item.imagem" class="w-100" alt="Imagem Plano" />
-                                                <a href="#!">
-                                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                                                </a>
-                                            </div>
-                                            <!-- Image -->
-                                        </div>
+            foreach (var item in Model.PlanosPedidos)
+            {
+                if (item.PlanoPedidoID == null)
+                {
+<h3>Você não possui itens no carrinho</h3> }
+else
+{ <!-- Single item -->
+                        <div class="row">
+                            <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+                                <!-- Image -->
+                                <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+                                    <img src="@item.imagem" class="w-100" alt="Imagem Plano" />
+                                    <a href="#!">
+                                        <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+                                    </a>
+                                </div>
+                                <!-- Image -->
+                            </div>
 
-                                        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
-                                            <!-- Data -->
-                                            <p><strong> @item.nomePacote</strong></p>
-                                            <button type="button" class="btn btn-danger btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
-                                                    title="Remove item">
-                                                @Html.ActionLink("Remover", "ExcluirPlano", new { id = item.PlanoPedidoID }, new { @style = "color: white; text-decoration: none" })
-                                            </button>
-                                            <!-- Data -->
-                                        </div>
+                            <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                                <!-- Data -->
+                                <p><strong> @item.nomePacote</strong></p>
+                                <button type="button" class="btn btn-danger btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
+                                        title="Remove item">
+                                    @Html.ActionLink("Remover", "ExcluirPacote", new { id = item.PlanoPedidoID }, new { @style = "color: white; text-decoration: none" })
+                                </button>
+                                <!-- Data -->
+                            </div>
 
-                                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
 
-                                            <!-- Price -->
-                                            <p class="text-start text-md-center">
-                                                <strong>R$ </strong>
-                                            </p>
-                                            <!-- Price -->
-                                        </div>
-                                    </div>
-                                    <!-- Single item -->
+                                <!-- Price -->
+                                <p class="text-start text-md-center">
+                                    <strong>R$ @item.dsPreco </strong>
+                                </p>
+                                <!-- Price -->
+                            </div>
+                        </div> <!-- Single item -->
 
-                                    <hr class="my-4" />
-
-                                }
-                            }
-                        }
+                                                <hr class="my-4" />
+                                                
+                                                
+                                                
+                                                }
+                                        }
+                                    }
                     </div>
                 </div>
 
@@ -104,7 +99,16 @@
                                 <div>
                                     <strong>Valor Total</strong>
                                 </div>
-                                <span><strong>R$ 0,00 </strong></span>
+
+                                @{ foreach (var item in Model.PlanosPedidos)
+                                    {
+                                        if (double.TryParse(item.dsPreco, out double valor))
+                                        {
+                                            ViewBag.soma += valor;
+                                        }
+                                    } }
+
+                                <span><strong>R$ @ViewBag.soma </strong></span>
                             </li>
                         </ul>
 
