--- a/Views/Home/Pagamento.cshtml
+++ b/Views/Home/Pagamento.cshtml
@@ -16,8 +16,8 @@
             <div class="col-md-4 order-md-2 mb-4">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
                     <span class="text-muted">Seu carrinho</span>
-                    <span class="badge badge-secondary badge-pill">3</span>
                 </h4>
+
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
@@ -26,27 +26,8 @@
                         </div>
                         <span class="text-muted">R$12</span>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Segundo produto</h6>
-                            <small class="text-muted">Breve descrição</small>
-                        </div>
-                        <span class="text-muted">R$8</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Terceiro item</h6>
-                            <small class="text-muted">Breve descrição</small>
-                        </div>
-                        <span class="text-muted">R$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">Código de promoção</h6>
-                            <small>CODIGOEXEMEPLO</small>
-                        </div>
-                        <span class="text-success">-R$5</span>
-                    </li>
+                   
+
                     <li class="list-group-item d-flex justify-content-between">
                         <span>Total (BRL)</span>
                         <strong>R$20</strong>
@@ -62,42 +43,19 @@
                 <form class="needs-validation was-validated" novalidate="">
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="primeiroNome">Nome</label>
+                            <label for="primeiroNome">Nome completo:</label>
                             <input type="text" class="form-control" id="primeiroNome" placeholder="" value="" required="">
                             <div class="invalid-feedback">
                                 É obrigatório inserir um nome válido.
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="sobrenome">Sobrenome</label>
-                            <input type="text" class="form-control" id="sobrenome" placeholder="" value="" required="">
-                            <div class="invalid-feedback">
-                                É obrigatório inserir um sobre nome válido.
-                            </div>
-                        </div>
                     </div>
-
-                    <div class="mb-3">
-
-                    </div>
-
                     <div class="mb-3">
                         <label for="email">Email <span class="text-muted">(Opcional)</span></label>
                         <input type="email" class="form-control" id="email" placeholder="fulano@exemplo.com">
                         <div class="invalid-feedback">
                             Por favor, insira um endereço de e-mail válido, para atualizações de entrega.
                         </div>
-                    </div>
-
-                    <div class="mb-3">
-
-                    </div>
-
-                    <div class="mb-3">
-                    </div>
-
-                    <div class="row">
-
                     </div>
 
                     <hr class="mb-4">
@@ -109,7 +67,7 @@
                             @Html.DropDownList("Tipo_Pagamento", ViewBag.Tipo_Pagamento as List<SelectListItem>, new { @class = "form-control dropdown" })
                         </div>
                     </div>
-                
+
                 </form>
             </div>
         </div>
@@ -126,26 +84,26 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     <script>
-// Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
-      (function() {
-        'use strict';
+        // Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
+        (function () {
+            'use strict';
 
-        window.addEventListener('load', function() {
-          // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
-          var forms = document.getElementsByClassName('needs-validation');
+            window.addEventListener('load', function () {
+                // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
+                var forms = document.getElementsByClassName('needs-validation');
 
-          // Faz um loop neles e previne envio
-          var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', function(event) {
-              if (form.checkValidity() === false) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
-              form.classList.add('was-validated');
+                // Faz um loop neles e previne envio
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
             }, false);
-          });
-        }, false);
-      })();
+        })();
     </script>
 
 }
