--- a/Views/Pacote/ListarTodosPacotes.cshtml
+++ b/Views/Pacote/ListarTodosPacotes.cshtml
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 <link href="~/Content/css/sb-admin-2.min.css" rel="stylesheet">
 <link href="~/Styles/dashboard.css" rel="stylesheet" />
-
+<link href="~/Styles/reset.css" rel="stylesheet" />
 
 
 
@@ -85,23 +85,23 @@
 
                         <div class="form-group">
                             <div class="col-md-10">
-                                <input type="text" name="nmPacote" placeholder="Digite o interresse">
+                                <input type="text" name="nmPacote" placeholder="Digite o interresse" class="form-control input">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-md-10">
-                                <input type="text" name="nmPais" placeholder="Digite o nome do Pais">
+                                <input type="text" name="nmPais" placeholder="Digite o nome do país" class="form-control input">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-md-10">
-                                <input type="text" name="valor" placeholder="Digite um valor minimo e maximo, Exp:0/2000">
+                                <input type="text" name="valor" placeholder="Digite um preço mínimo/máximo" class="form-control input">
                             </div>
                         </div>
 
-                        <input type="submit" name="Filtrar">
+                        <input type="submit" name="Filtrar" class="btn-dark-blue">
                         <br /> <br />
                     }
 
@@ -119,10 +119,8 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.dsPacote)
                             </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Imagem)
-                            </th>
-                            <th></th>
+                           
+                           
                         </tr>
 
                         @foreach (var item in Model)
@@ -140,10 +138,10 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.dsPacote)
                                 </td>
+                             
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Imagem)
-                                </td>
-                                <td>
+                                    @Html.ActionLink("Editar", "EditarPlanosId", "Plano", new { id = item.IdPacote }, new { @class = "btn btn-warning btn-sm" })<br />
+                                    @Html.ActionLink("Deletar ", "DeletarPacote", "Pacote", new { id = item.IdPacote }, new { @class = "btn btn-danger btn-sm" })
                                 </td>
                             </tr>
                         }
