--- a/Views/Plano/Inser_Planos.cshtml
+++ b/Views/Plano/Inser_Planos.cshtml
@@ -12,8 +12,6 @@
     ViewBag.Title = "Inser_Planos";
 }
 
-<h2>Inserir Cidade do Pacote</h2>
-
 
 <!-- Page Wrapper -->
 <div id="wrapper">
@@ -33,19 +31,13 @@
         <!-- Divider -->
         <hr class="sidebar-divider">
 
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            Planos
-        </div>
 
         <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw Example of credit-card-alt fa-credit-card-alt"></i>
-                <span>Vendas</span>
-            </a>
+            <i class="fas fa-fw Example of credit-card-alt fa-credit-card-alt"></i>
+            @Html.ActionLink("Tabela Vendas", "ConsTdDetalhes", "Home", new { area = "" }, new { @class = "list-text" })
         </li>
-
+        <br />
         <!-- Nav Item - Charts -->
         <li class="nav-item">
             <i class="fa-solid fa-inbox"></i>
@@ -61,8 +53,9 @@
         <br />
         <li>
             <i class="fa-solid fa-right-to-bracket"></i>
-            @Html.ActionLink("Sair", "Logout", "Home", new { @class = "list-text" })
+            @Html.ActionLink("Sair", "Logout", "Home", new { area = "" }, new { @class = "list-text" })
         </li>
+
 
 
     </ul>
@@ -79,132 +72,125 @@
 
 
 
-
-
                     @using (Html.BeginForm("InserirCadPacote", "Pacote", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         @Html.AntiForgeryToken()
 
-                        <div class="form-horizontal">
-                            <h4>Dados da Cidade referente ao Plano</h4>
-                            <hr />
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-horizontal">
+                        <h4>Dados da Cidade referente ao Plano</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.nmPais, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.nmPais, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.nmPais, "", new { @class = "text-danger" })
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.nmPais, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.nmPais, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.nmPais, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.nmCidade, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.nmCidade, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.nmCidade, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsCidade, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsCidade, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsCidade, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsIdiomaP, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsIdiomaP, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsIdiomaP, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+
+
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsIdiomaS, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsIdiomaS, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsIdiomaS, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="col-md-offset-2 col-md-10">
+                                            <input type="submit" value="Cadastrar" class="btn-dark-blue" />
+                                        </div>
+                                    </div>
+
                                 </div>
-                            </div>
 
-                            <br />
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.nmCidade, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.nmCidade, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.nmCidade, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                                <div class="col">
 
-                            <br />
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsClima, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsClima, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsClima, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsCidade, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsCidade, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsCidade, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
 
-                            <br />
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsClima, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsClima, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsClima, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsEstadiaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsEstadiaInicio, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsEstadiaInicio, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
 
-                            <br />
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsEstadiaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsEstadiaInicio, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsEstadiaInicio, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsEstadiaTermino, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsEstadiaTermino, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsEstadiaTermino, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsEstadiaTotal, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsEstadiaTotal, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsEstadiaTotal, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
 
-                            <br />
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsEstadiaTermino, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsEstadiaTermino, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsEstadiaTermino, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
 
-                            <br />
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsEstadiaTotal, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsEstadiaTotal, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsEstadiaTotal, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <br />
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsMoeda, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsMoeda, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsMoeda, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <br />
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsIdiomaP, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsIdiomaP, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsIdiomaP, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <br />
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.dsIdiomaS, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.dsIdiomaS, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.dsIdiomaS, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <br />
-
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Cadastrar" class="btn btn-default" />
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.dsMoeda, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.dsMoeda, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.dsMoeda, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    }
 
-                    <div>
-                        @Html.ActionLink("Voltar", "Index", "Home")
+                       
+                        </div>
+                        }
+
                     </div>
-
-
-
-                </div>
 
             </div>
             <!-- /.container-fluid -->
