--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,23 +17,26 @@
     {
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
             <div class="container">
-                <b> @Html.ActionLink("Além das Fronteiras", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</b>
+
+                <img src="~/Imagens/Design_sem_nome-removebg-preview.png" class="" />
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar a navegação" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                <div class="collapse navbar-collapse justify-content-center">
                     <ul class="navbar-nav flex-grow-1">
                         @if (Session["tipoLogado1"] == null && Session["tipoLogado2"] == null)
                         {
                             <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Quem Somos?", "QuemSomos", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                         }
 
                         @if (Session["tipoLogado1"] != null)
                         {
                             <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "ListarTodosPacotes", "Pacote", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Todos os Planos", "SaibaMais", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-item">@Html.ActionLink("Quem Somos?", "QuemSomos", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                         }
                     </ul>
 
